# mds-datawarehouse

./: .gitignore  compose.yaml  pyproject.toml
Ejercicios/TP1/: pollutant.sql
Ejercicios/TP2/: NorthwindDB_queries - enunciados.rtf
ejercicios/TP2/: NorthwindDB_queries - soluciones.rtf
ligaplus/: 00_create_database.sql  01_create_tables.sql  02_insert_location.sql  05_fk_constrains.sql  10_insert_dimensions.sql  15_insert_users.sql  16_insert_user_subscriptions.sql  17_insert_category.sql  18_insert_content.sql  19_insert_user_search.sql  20_insert_search_response.sql  21_insert_content_hits_searchs.sql  25_content_rating.sql
ligaplus/generators/: content.ipynb  content_usage_random.ipynb  user_search.ipynb  users.ipynb
ligaplus/queries/: subobjetivo_1_pregunta_1.sql  subobjetivo_1_pregunta_2.sql  subobjetivo_1_pregunta_3.sql  subobjetivo_2_pregunta_1.sql  subobjetivo_2_pregunta_2.sql  subobjetivo_2_pregunta_3.sql  subobjetivo_3_pregunta_1.sql  subobjetivo_3_pregunta_2.sql  subobjetivo_3_pregunta_3.sql
ligaplus/source_data/: content.csv  export.csv  users.csv
