[tool.poetry]
name = "mds-datawarehouse"
version = "0.1.0"
description = ""
authors = ["Federico Castañeda <fcastaneda@allurion.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^21.0.0"
jupyter = "^1.0.0"
polars = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
